# devicepasswords

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  freeze.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-image.yml  lint.yml  pypi.yml
contrib/: docker-compose.yml
contrib/freeradius/: docker-compose.yml
devicepasswords/: __init__.py  asgi.py  db.py  devpwd.py  headers.py  oidc.py  pwdhash.py  smgmt.py  views.py
devicepasswords/hashes/: __init__.py  dovecot.py
devicepasswords/migrations/: dd50cf0133d0_add_login_column_to_tokens.py  efe87d7792f3_initial_revision.py
devicepasswords/static/: main.css  main.js  ping.js  vars.css
devicepasswords/templates/: index.html
docs/: index.md
docs/explanation/: index.md
docs/how-to/: app-integration.md  idp-integration.md  idp-integrations.md  index.md  interface.md  password-hashing.md  password-validation.md  troubleshooting.md
docs/reference/: database.md  index.md  logo.md  options.md
docs/stylesheets/: extra.css
docs/tutorial/: conclusion.md  containers.md  dovecot.md  index.md  keycloak.md
tests/hashes/: test_dovecot.py
